@@ -24,7 +24,6 @@ import org.apache.lucene.search.DocIdSetIterator;
 import org.apache.lucene.search.ScoreMode;
 import org.apache.lucene.search.Scorer;
 import org.apache.lucene.search.TwoPhaseIterator;
-import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.FixedBitSet;
 
 /** Wraps a Scorer with additional checks */
@@ -196,11 +195,10 @@ public class AssertingScorer extends Scorer {
       }
 
       @Override
-      public void intoBitSet(Bits acceptDocs, int upTo, FixedBitSet bitSet, int offset)
-          throws IOException {
+      public void intoBitSet(int upTo, FixedBitSet bitSet, int offset) throws IOException {
         assert docID() != -1;
         assert offset <= docID();
-        in.intoBitSet(acceptDocs, upTo, bitSet, offset);
+        in.intoBitSet(upTo, bitSet, offset);
         assert docID() >= upTo;
       }
     };
